--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#AA3C39</color>
     <color name="colorAccent">#FFACAA</color>
     <color name="p0Primary">#d42a52</color>
-    <color name="p0PrimaryDark">#f07994</color>
-    <color name="p0Accent">#8C0021</color>
+    <color name="p0PrimaryDark">#8C0021</color>
+    <color name="p0Accent">#f07994</color>
     <color name="p1Primary">#fbac1e</color>
     <color name="p1PrimaryDark">#a46a00</color>
     <color name="p1Accent">#ffcd73</color>
