--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -42,7 +42,7 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Submit"
             android:layout_margin="2dp"
@@ -51,7 +51,7 @@
             android:onClick="onSubmitClick"/>
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Next"
             android:layout_margin="2dp"
@@ -69,7 +69,7 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Submit"
             android:layout_margin="2dp"
@@ -78,7 +78,7 @@
             android:onClick="onSubmitClick"/>
         <Button
             android:id="@+id/button4"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Next"
             android:layout_margin="2dp"
