--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -19,14 +19,47 @@
         android:fontFamily="sans-serif-thin"
         android:textColor="@color/p0Accent"
         android:textSize="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/Q1"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/live3"
+            android:layout_width="90px"
+            android:layout_height="90px"
+            android:src="@drawable/p0heart"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="0.01"/>
+        <ImageView
+            android:id="@+id/live2"
+            android:layout_width="90px"
+            android:layout_height="90px"
+            android:src="@drawable/p0heart"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="0.01"/>
+        <ImageView
+            android:id="@+id/live1"
+            android:layout_width="90px"
+            android:layout_height="90px"
+            android:src="@drawable/p0heart"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="0.01"/>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/question"
         android:layout_width="270px"
         android:layout_height="270px"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:src="@drawable/p_0_cesium"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
