--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -12,7 +12,7 @@
               android:orientation="vertical"
               android:background="#801815"
               android:onClick="onSplashPageClick"
-              tools:context="com.redstriped.cyclopenten.finish">
+              tools:context="com.redstriped.cyclopenten.GameOverActivity">
 
     <TextView
         android:layout_width="wrap_content"
