--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -27,6 +27,28 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/logo_design"/>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/currentpoints"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
+            android:textColor="#550200"
+            android:textSize="90px"
+            android:text="Points: 0">
+        </TextView>
+        <TextView
+            android:id="@+id/bestpoints"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
+            android:textColor="#550200"
+            android:textSize="90px"
+            android:text="Best: 0">
+        </TextView>
+    </LinearLayout>
 
 </LinearLayout>
